fixex in align

--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,16 +1,13 @@
 .mail-wrap{
     display:flex; 
     flex-direction:column; 
-    justify-content: space-between; 
-    align-items:left;
     margin-bottom: 1rem;
 }
 
 .map-wrap{
     display:flex; 
     flex-direction:row; 
-    justify-content: space-between; 
-    align-items:left;
+    justify-content:space-around; 
     column-gap: 2rem;
     margin-bottom: 1rem;
 }
